solved linter problems
